# tarot

./: .env.example  .gitignore  .pre-commit-config.yaml  README copy.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
backend/: bot.Dockerfile  pyproject.toml  web.Dockerfile
backend/scripts/alembic/: create_migrations.sh
backend/src/: hot_reload_bot.py
backend/src/app/: config.py  exceptions.py
backend/src/app/infrastructure/: files.py  logging.py
backend/src/app/infrastructure/database/: setup.py
backend/src/app/infrastructure/database/models/: __init__.py  base.py  friendships.py  groups.py  questions.py  quiz_response.py  users.py
backend/src/app/infrastructure/database/repo/: cards.py  groups.py  questions.py  quiz_responses.py  readings.py  requests.py  spreads.py  users.py
backend/src/app/infrastructure/i18n/: __init__.py
backend/src/app/infrastructure/i18n/locales/: en.json  ru.json
backend/src/app/infrastructure/rabbit/: consumer.py  producer.py
backend/src/app/infrastructure/services/: quizzes.py
backend/src/app/migrations/: env.py
backend/src/app/migrations/versions/: 09dd798fb4ee_user_fields_extra.py  10d9e7c0502c_initial_migration.py  16441da0835e_groups.py  1e89e80c211e_terms.py  251346e16d50_user_model_update.py  2904f67058c9_app_language_code_upd.py  361ca537629e_user_fields_extra.py  4d4d0dbf3c31_friendships.py  6e9b8b859db2_question_model.py  79bd4e038f67_friendships.py  8dd5c57c17a2_tarot.py  9620fa1bcc91_app_language_code.py  f8d34589dbe1_friendships.py
backend/src/app/schemas/: inbox.py  invites.py  questions.py  quiz.py  quizzes.py  start.py  tarot.py  users.py
backend/src/app/services/: base.py  inbox.py  invites.py  payments.py  quizzes.py  requests.py  start.py  tarot.py  users.py
backend/src/app/tgbot/: bot.py
backend/src/app/tgbot/handlers/: __init__.py  start.py  tarot.py
backend/src/app/tgbot/keyboards/: commands.py  inline.py  keyboards.py
backend/src/app/tgbot/middlewares/: auth.py  database.py  i18n.py  service.py
backend/src/app/tgbot/services/: broadcaster.py
backend/src/app/webhook/: app.py  auth.py  utils.py
backend/src/app/webhook/admin/: __init__.py  questions.py  users.py
backend/src/app/webhook/dependencies/: bot.py  database.py  i18n.py  rabbit.py  service.py
backend/src/app/webhook/routers/: __init__.py  base.py  tarot.py
backend/src/mock/: mock_questions.py
frontend/: .prettierrc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts
frontend/src/application/: router.ts
frontend/src/application/services/: useTelegram.ts
frontend/src/composables/: invite.ts  start.ts
frontend/src/domain/entities/: Friend.ts  Message.ts  Question.ts  Quiz.ts  User.ts  UserProfile.ts  index.ts
frontend/src/i18n/: index.ts
frontend/src/router/: router-shims.d.ts  router.ts
frontend/src/services/: index.ts  useLanguage.ts  useLayout.ts  useLottie.ts  useScroll.ts  useStatic.ts  useTarot.ts  useTelegram.ts  useThumbnail.ts
frontend/src/store/: button.ts  image.cache.ts  inbox.ts  inviter.ts  quiz.ts  tarot.ts  user.ts
frontend/src/types/: StartParamKey.ts  schema.d.ts
frontend/src/utils/: color.ts
reactcomp/helpers/: equal.ts
(+87 files in other folders)
