[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "GlowApp"
version = "0.0.1"

description = "GlowApp - Mini web app in Telegram"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "environs",
    "betterlogging",
    "aio-pika",
]
[project.optional-dependencies]
bot = [
    "aiogram",
    "redis",
    "aiogram-dialog",
    "faker",
    "watchdog",
]
web = [
    "aiogram",
    "uvicorn",
    "fastapi",
    "python-dateutil",
    "sqladmin",
]


[project.urls]


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.py$'
exclude = '''
/(
    src/app/migrations
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
